--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 
-    <h2>Add iㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁn One Minute</h2>
+    <h2>Add iㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋn One Minute</h2>
     <p>This page demonstrates using React with no build tooling.</p>
     <p>React is loaded as a script tag.</p>
 
